# python-scripts

./: .gitignore  .pylintrc  Pipfile  README.md  enny_mo.py  ical.py  package.py  pyproject.toml  requirements.txt  shift.py  test_ical.py  test_shift.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  codeql-analysis.yml  python-ci.yml  release.yml
scripts/: archiver.py  backupper.py  checksum.py  common.py  edx.py  enny_mo.py  feed_downloader.py  ical.py  inventory.py  shift.py  split.py
scripts/test/: test_archiver.py  test_checksum.py  test_enny_mo.py  test_inventory.py  test_list.py
tests/: test_archiver.py  test_backupper.py  test_checksum.py  test_common.py  test_enny_mo.py  test_ical.py  test_inventory.py  test_shift.py
