[project]
name = "python-scripts"
description = "Various Python scripts"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "icalendar==5.0.12",
    "Scrapy==2.11.1",
    "selenium==4.20.0",
    "markdownify==0.12.1",
    "requests==2.32.5",
    "feedparser==6.0.11",
]

[dependency-groups]
dev = [
    "pytest==9.0.0",
    "ruff==0.14.4",
]

[tool.ruff.lint]
extend-select = ["E", "W", "I", "B", "Q"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "scripts"
]
log_cli = true
log_cli_level = "DEBUG"
